--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "ng serve -o --port=4203",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "api": "json-server-auth ./database/db.json -r ./database/routes.json",
     "test": "ng test"
   },
   "private": true,
@@ -36,6 +37,8 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
